# machine-learning-learning-path

./: .gitignore  .pre-commit-config.yaml  EDA.ipynb  Makefile  README.md  churn_library.py  churn_script_logging_and_tests.py  docusaurus.config.js  inference.py  main.py  model_card.md  pyproject.toml  requirements.txt  sidebars.js  slice_output.txt
.dvc/: config
.github/workflows/: ci.yml  deploy.yml
components/get_data/: conda.yml  run.py
components/test_regression_model/: conda.yml  run.py
cookiecutter-mlflow-template/{{cookiecutter.step_name}}/: conda.yml  {{cookiecutter.script_name}}
data/: .gitignore  census.csv  census.csv.dvc  census_clean.csv  df_test_feature_engineering_selection.csv
docs/: codebase.md  cv.md  docusaurus.config.js  git_tutorial.md  introduction.md  overview.md  package-lock.json  package.json  profile.md  sidebars.js
docs/data_analyst_projects/: advanced_data_wrangling.md  communicate_data_findings.md  investigate_a_dataset.md  nanodegree_outline.md
docs/data_scientist/: data_scientist_capstone.md  disaster_response_pipeline.md  nanodegree_outline.md  recommendation_engines.md  writing_data_scientist_blog_post.md
explore_data_analysis/: utils.py
extract_transform_load/: load.py
model/: model.pkl
models/: logistic_model.pkl  model.pkl
module/: model.py  train_model.py
proposal/: proposal.md
report/: report.md
tests/: test_api.py  test_logger.py  test_model.py
training/: sagemaker-hyperparameter-tuning.ipynb  train_model_lightgbm.py  train_model_lr.py  train_model_rf.py
utils/: logger.py  utils.py
(+463 files in other folders)
