[tool.poetry]
name = "ml-production"
version = "0.1.0"
description = "Machine Learning in Production"
authors = ["vnk8071 <nguyenkhoi8071@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.3"
numpy = "1.23.5"
pytest = "^7.4.0"
autopep8 = "^2.0.2"
pylint = "^2.17.5"
matplotlib = "^3.7.2"
scikit-learn = "^1.3.0"
joblib = "^1.3.2"
seaborn = "^0.12.2"
pre-commit = "^3.3.3"
mlflow = "^2.6.0"
wandb = "^0.15.8"
hydra-core = "1.3.2"
hydra-joblib-launcher = "1.2.0"
cookiecutter = "^2.3.0"
jupyterlab = "4.0.5"
notebook = "7.0.2"
ipython = "8.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
